--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "vite lint"
     },
     "dependencies": {
+        "mapbox-gl": "^2.11.0",
         "@tabler/core": "^1.0.0-beta16",
         "@tak-ps/vue-tabler": "^3.1.1",
         "core-js": "^3.6.4",
