--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "mesasar",
     "version": "0.1.0",
+    "type": "module",
     "private": true,
     "scripts": {
         "serve": "vite serve --port 8080",
@@ -8,7 +9,7 @@
         "lint": "vite lint"
     },
     "dependencies": {
-        "mapbox-gl": "^2.11.0",
+        "mapbox-gl": "^3.0.0",
         "@tabler/core": "^1.0.0-beta16",
         "@tak-ps/vue-tabler": "^3.1.1",
         "core-js": "^3.6.4",
@@ -22,10 +23,10 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.17.0",
-        "@vitejs/plugin-vue": "^4.1.0",
+        "@vitejs/plugin-vue": "^5.0.0",
         "eslint": "^8.11.0",
         "eslint-plugin-vue": "^9.0.0",
-        "vite": "^4.2.1"
+        "vite": "^5.0.0"
     },
     "eslintConfig": {
         "root": true,
