--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "scripts": {
         "serve": "vite serve --port 8080",
         "build": "vite build",
-        "lint": "vite lint"
+        "lint": "eslint ./src/"
     },
     "dependencies": {
-        "mapbox-gl": "^3.0.0",
         "@tabler/core": "^1.0.0-beta16",
         "@tak-ps/vue-tabler": "^3.1.1",
         "core-js": "^3.6.4",
         "floating-vue": "^2.0.0-beta.17",
+        "mapbox-gl": "^3.0.0",
         "maplibre-gl": "^3.0.0",
         "sass": "^1.49.7",
         "sass-loader": "^13.0.0",
@@ -24,26 +24,10 @@
     "devDependencies": {
         "@babel/eslint-parser": "^7.17.0",
         "@vitejs/plugin-vue": "^5.0.0",
-        "eslint": "^8.11.0",
+        "eslint": "^9.0.0",
         "eslint-plugin-vue": "^9.0.0",
+        "typescript-eslint": "^8.22.0",
         "vite": "^5.0.0"
-    },
-    "eslintConfig": {
-        "root": true,
-        "globals": {},
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended"
-        ],
-        "parserOptions": {
-            "parser": "@babel/eslint-parser"
-        },
-        "rules": {
-            "vue/multi-word-component-names": 1
-        }
     },
     "browserslist": [
         "> 1%",
