--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "serve": "vite serve --port 8080",
-        "build": "vite build && cp news.json dist/ && mkdir -p dist/news/ && cp news/* dist/news/",
+        "build": "vite build && cp news.json dist/ && mkdir -p dist/news/ && cp news/* dist/news/ && cp *.md dist/",
         "lint": "eslint ./src/"
     },
     "dependencies": {
